--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
                 }
 
                 generateSolvableLevel() {
+                    const startTime = performance.now();
                     let attempts = 0;
                     let bestLevel = null;
                     let minPenalty = Infinity;
@@ -554,12 +555,14 @@
                     // 50% chance to set 3-letter limit
                     this.wordLengthLimit = Math.random() < 0.5 ? 3 : null;
 
+                    // Optimization: ALWAYS use the small internal DICTIONARY for level generation checks.
+                    // Checking 50 words * 200 attempts is much faster than 10,000 words * 200 attempts.
                     while (attempts < 200) {
                         attempts++;
                         this.randomizePoints();
                         this.createGrid();
 
-                        const solutions = this.findSolutions();
+                        const solutions = this.findSolutions(DICTIONARY);
                         if (solutions.length > 0) {
                             // Evaluate solutions for "cleanliness" around target
                             for (const sol of solutions) {
@@ -577,7 +580,6 @@
                                     };
                                 }
                             }
-
                             // If we found a perfect solution (penalty 0), we can stop early
                             if (minPenalty === 0) break;
                         }
@@ -592,11 +594,11 @@
 
                         if (this.wordLengthLimit) {
                             this.showMessage(`3글자 제한 라운드! (예: ${bestLevel.path.slice(0, 3).map(p => this.grid[p.y][p.x]).join('')}...)`);
-                            // Note: showMessage will be overridden by initial prompt, so update UI specifically
                         }
+                        const endTime = performance.now();
+                        console.log(`Level generated in ${attempts} attempts (${(endTime - startTime).toFixed(2)}ms)`);
                     } else {
                         console.warn("풀 수 있는 레벨을 생성하지 못했습니다.");
-                        // Retry once more without limit if fails? No, just log for now
                     }
                 }
 
@@ -867,13 +869,14 @@
                     }
                 }
 
-                findSolutions() {
+                findSolutions(dictSource = null) {
                     const results = [];
-                    const dict = this.isDictLoaded ? Array.from(this.externalDictionary) : DICTIONARY;
+                    // Use provided dictSource OR the best available dictionary
+                    const dict = dictSource || (this.isDictLoaded ? Array.from(this.externalDictionary) : DICTIONARY);
 
                     for (const word of dict) {
                         if (this.wordLengthLimit && word.length !== this.wordLengthLimit) continue;
-                        if (word.length >= 2 && this.simulateWord(word)) { // Keep word.length >= 2 for when wordLengthLimit is null
+                        if (word.length >= 2 && this.simulateWord(word)) { // Keep word.length >= 2
                             results.push(word);
                         }
                     }
