--- a/index.html
+++ b/index.html
@@ -424,6 +424,35 @@
         #guide-panel li strong {
             color: var(--primary-color);
         }
+
+        /* Stage Progress Indicators */
+        .stage-indicator-container {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            margin-left: 10px;
+        }
+
+        .stage-dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background: var(--text-color);
+            opacity: 0.2;
+            transition: all 0.3s ease;
+        }
+
+        .stage-dot.active {
+            opacity: 1;
+            background: var(--primary-color);
+            transform: scale(1.3);
+            box-shadow: 0 0 8px var(--primary-color);
+        }
+
+        .stage-dot.completed {
+            opacity: 0.6;
+            background: var(--primary-color);
+        }
     </style>
 </head>
 
@@ -434,11 +463,17 @@
             <div style="display:flex; justify-content:center; align-items:center; gap:12px; margin-bottom:5px;">
                 <div id="day-level-display"
                     style="font-size: 0.85rem; color: var(--secondary-color); font-weight: bold;"></div>
+                <div id="stage-dots" class="stage-indicator-container">
+                    <div class="stage-dot"></div>
+                    <div class="stage-dot"></div>
+                    <div class="stage-dot"></div>
+                    <div class="stage-dot"></div>
+                </div>
                 <div id="live-timer"
                     style="font-size: 0.85rem; color: var(--accent-color); font-weight: bold; font-variant-numeric: tabular-nums;">
                 </div>
             </div>
-            <p>단어의 힘으로 공간을 도약하세요.</p>
+
         </header>
 
         <div id="login-overlay"
@@ -466,7 +501,7 @@
         <div id="briefing-overlay"
             style="display: none; position: absolute; top:0; left:0; width: 100%; height: 100%; background: var(--bg-color); border-radius: 24px; flex-direction: column; justify-content: center; align-items: center; z-index: 90; padding: 24px; text-align: center;">
             <div style="margin-bottom: 25px;">
-                <h2 id="briefing-title" style="font-size: 1.6rem; color: var(--primary-color); margin-bottom: 10px;">레벨
+                <h2 id="briefing-title" style="font-size: 1.6rem; color: var(--primary-color); margin-bottom: 10px;">단계
                     브리핑</h2>
                 <p id="briefing-desc" style="color: #94a3b8; font-size: 0.9rem;">이 맵에 대한 정보입니다.</p>
             </div>
@@ -518,7 +553,7 @@
         <div id="control-panel">
             <div class="input-group">
                 <input type="text" id="word-input" placeholder="단어를 입력하세요" maxlength="10">
-                <button id="start-btn">게임<br>시작</button>
+                <button id="start-btn">이동<br>하기</button>
 
                 <button id="hint-btn" class="secondary-btn">정답<br>보기</button>
             </div>
@@ -542,12 +577,16 @@
             <div id="guide-panel">
                 <h3>조작 가이드</h3>
                 <div
+                    style="font-size: 0.8rem; color: var(--secondary-color); margin-bottom: 10px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 5px; word-break: keep-all; line-height: 1.4;">
+                    알맞은 단어를 입력하고 목적지까지 이동하세요.
+                </div>
+                <div
                     style="font-size: 0.8rem; color: var(--secondary-color); margin-bottom: 10px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 5px;">
                     <strong>자음 이동:</strong> 초성 ↔ 종성 위치로 이동
                 </div>
                 <div
                     style="font-size: 0.8rem; color: var(--secondary-color); margin-bottom: 10px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 5px;">
-                    <strong>모음 이동:</strong> 모음 모양에 따라 해당 방향으로 이동
+                    <strong>모음 이동:</strong> 모음 모양에 따라 이동
                 </div>
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 5px; font-size: 0.75rem;">
                     <div>ㅏ, ㅐ : 오른쪽 1칸 (→)</div>
@@ -559,10 +598,8 @@
                     <div>ㅜ, ㅟ : 아래쪽 1칸 (↓)</div>
                     <div>ㅠ : 아래쪽 2칸 (⇊)</div>
                     <div>ㅘ, ㅙ : 우측 상단 (↗)</div>
-                    <div>ㅝ : 좌측 하단 (↙)</div>
-                    <div
-                        style="grid-column: span 2; text-align: center; margin-top: 3px; color: #94a3b8; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 3px;">
-                        ㅡ, ㅣ, ㅢ : 이동하지 않음</div>
+                    <div>ㅝ, ㅞ : 좌측 하단 (↙)</div>
+                    <div>ㅡ, ㅣ, ㅢ : 이동하지 않음 (X)</div>
                 </div>
             </div>
         </div>
@@ -642,7 +679,8 @@
                     this.grid = [];
                     this.playerPos = { x: 0, y: 0 };
                     this.targetPos = { x: 4, y: 4 };
-                    this.startPos = { x: 0, y: 0 }; // Track start for reset
+                    this.startPos = { x: 0, y: 0 }; // Track start for reset (checkpoint)
+                    this.initialStartPos = { x: 0, y: 0 }; // Track initial level start (visual)
 
                     this.playerId = "";
                     this.currentWord = "";
@@ -1037,6 +1075,7 @@
                     this.wordDisplayEl = document.getElementById('active-word-display');
                     this.dayLevelDisplayEl = document.getElementById('day-level-display');
                     this.liveTimerEl = document.getElementById('live-timer');
+                    this.stageDots = document.querySelectorAll('.stage-dot');
                     this.timerInterval = null;
 
                     this.hintBtn = document.getElementById('hint-btn');
@@ -1086,7 +1125,7 @@
                             this.loginOverlay.style.transform = 'scale(1.1)';
                             setTimeout(() => {
                                 this.loginOverlay.style.display = 'none';
-                                this.showMessage(`${this.playerId}님, 반갑습니다! 모험을 시작하세요.`);
+                                this.showMessage(`${this.playerId}님, 환영합니다.`);
                             }, 500);
                         } else {
                             this.playerIdInput.style.animation = 'shake 0.5s';
@@ -1150,7 +1189,7 @@
                 }
 
                 async showBriefing() {
-                    this.briefingTitle.textContent = `레벨 ${this.currentLevelIndex + 1} / ${this.maxLevelsPerDay}`;
+                    this.briefingTitle.textContent = `${this.currentLevelIndex + 1}단계`;
 
                     // Show constraint info based on level type
                     switch (this.levelType) {
@@ -1249,6 +1288,17 @@
 
 
 
+                updateStageDots() {
+                    this.stageDots.forEach((dot, index) => {
+                        dot.classList.remove('active', 'completed');
+                        if (index < this.currentLevelIndex) {
+                            dot.classList.add('completed');
+                        } else if (index === this.currentLevelIndex) {
+                            dot.classList.add('active');
+                        }
+                    });
+                }
+
                 render() {
                     this.gridEl.innerHTML = '';
                     for (let y = 0; y < this.gridSize; y++) {
@@ -1257,7 +1307,7 @@
                             cell.className = 'cell';
                             cell.textContent = this.grid[y][x];
 
-                            if (x === this.startPos.x && y === this.startPos.y) {
+                            if (x === this.initialStartPos.x && y === this.initialStartPos.y) {
                                 cell.classList.add('start');
                             }
                             if (x === this.targetPos.x && y === this.targetPos.y) {
@@ -1311,7 +1361,7 @@
                     this.startBtn.onclick = () => this.resetGame();
 
                     this.renderWordBlocks();
-                    this.showMessage("격자 위의 자음과 일치하는 글자를 클릭하세요. '패스'를 눌러 건너뛸 수 있습니다.");
+                    this.showMessage("격자 위의 자음과 일치하는 글자를 클릭하세요.");
                     this.isWarping = false;
                     this.hideActionPanel();
                 }
@@ -1319,7 +1369,7 @@
                 resetGame() {
                     this.isInputLocked = false;
                     this.inputEl.disabled = false;
-                    this.startBtn.innerHTML = "게임<br>시작";
+                    this.startBtn.innerHTML = "이동<br>하기";
                     this.startBtn.onclick = () => this.handleStart();
                     this.letterStates = [];
                     this.resetToStartPos();
@@ -1369,6 +1419,7 @@
                         this.startBtn.disabled = true;
                         if (this.timerInterval) clearInterval(this.timerInterval);
                         this.liveTimerEl.textContent = '';
+                        this.updateStageDots();
                         this.showClearBoard(null); // Show clear board on revisit
                         return;
                     }
@@ -1377,11 +1428,13 @@
                     this.rng = new SeededRandom(seed + this.currentLevelIndex);
                     this.determineLevelType();
 
-                    this.dayLevelDisplayEl.textContent = `Day ${dayString} - 레벨 ${this.currentLevelIndex + 1}/${this.maxLevelsPerDay}`;
+                    this.dayLevelDisplayEl.textContent = `Day ${dayString}`;
+                    this.updateStageDots();
                     this.inputEl.value = "";
                     this.wordDisplayEl.innerHTML = "";
                     this.generateSolvableLevel();
                     this.startPos = { ...this.playerPos };
+                    this.initialStartPos = { ...this.playerPos }; // Save initial start for visual label
                     this.render();
 
                     // Start timer immediately
@@ -1445,11 +1498,11 @@
                         if (allProcessed) {
                             this.currentLevelIndex++;
                             if (this.currentLevelIndex < this.maxLevelsPerDay) {
-                                this.showMessage(`🎉 레벨 클리어! ${this.currentLevelIndex + 1}단계로 이동합니다...`);
+                                this.showMessage(`🎉 단계 클리어! ${this.currentLevelIndex + 1}단계로 이동합니다...`);
                                 setTimeout(() => {
                                     this.isInputLocked = false;
                                     this.inputEl.disabled = false;
-                                    this.startBtn.innerHTML = "게임<br>시작";
+                                    this.startBtn.innerHTML = "이동<br>하기";
                                     this.initGame();
                                 }, 1500);
                             } else {
@@ -1467,7 +1520,7 @@
                             }
                             return true;
                         } else {
-                            this.showMessage("단어의 모든 블록을 사용해야합니다.");
+                            this.showMessage("모든 글자를 사용해야 합니다.");
                             return false;
                         }
                     }
@@ -1800,7 +1853,7 @@
                         case 'ㅜ': case 'ㅟ': dy = 1; break;
                         case 'ㅠ': dy = 2; break;
                         case 'ㅘ': case 'ㅙ': dx = 1; dy = -1; break;
-                        case 'ㅝ': dx = -1; dy = 1; break;
+                        case 'ㅝ': case 'ㅞ': dx = -1; dy = 1; break;
                         default: break;
                     }
 
