--- a/index.html
+++ b/index.html
@@ -346,14 +346,14 @@
         }
 
         #action-panel {
-            background: rgba(15, 23, 42, 0.5);
+            background: rgba(15, 23, 42, 0.95);
             padding: 15px;
             border-radius: 16px;
             border: 1px solid var(--primary-color);
             display: none;
             flex-direction: column;
             gap: 10px;
-            margin: 15px auto;
+            margin: 10px auto 0;
             width: fit-content;
             min-width: 250px;
         }
@@ -476,28 +476,6 @@
 
         </header>
 
-        <div id="login-overlay"
-            style="position: absolute; top:0; left:0; width: 100%; height: 100%; background: var(--bg-color); border-radius: 24px; display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 100; padding: 20px;">
-            <div style="margin-bottom: 30px;">
-                <h2 style="font-size: 1.8rem; margin-bottom: 10px; color: var(--primary-color);">입장 준비</h2>
-                <p style="color: #94a3b8; font-size: 0.9rem;">당신의 이름을 알려주세요.</p>
-            </div>
-            <div style="width: 100%; max-width: 250px;">
-                <input type="text" id="player-id-input" placeholder="플레이어 ID"
-                    style="width: 100%; background: rgba(255,255,255,0.05); border: 1px solid var(--secondary-color); border-radius: 12px; padding: 15px; color: white; text-align: center; font-size: 1.2rem; margin-bottom: 15px; outline: none; box-shadow: 0 0 15px rgba(129, 140, 248, 0.2);">
-                <button id="enter-btn"
-                    style="width: 100%; background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: var(--bg-color); border: none; border-radius: 12px; padding: 15px; font-weight: bold; font-size: 1.1rem; cursor: pointer; transition: transform 0.2s, box-shadow 0.2s;">입장하기</button>
-            </div>
-            <div id="login-scoreboard"
-                style="width:100%; max-width:300px; margin-top:20px; background:rgba(255,255,255,0.05); border-radius:16px; padding:16px; border:1px solid rgba(255,255,255,0.1);">
-                <div
-                    style="text-align:center; font-weight:bold; color:var(--primary-color); margin-bottom:10px; font-size:0.95rem;">
-                    🏆 오늘의 클리어 보드</div>
-                <div id="login-scoreboard-list" style="font-size:0.85rem; color:#94a3b8; text-align:center;">불러오는 중...
-                </div>
-            </div>
-        </div>
-
         <div id="briefing-overlay"
             style="display: none; position: absolute; top:0; left:0; width: 100%; height: 100%; background: var(--bg-color); border-radius: 24px; flex-direction: column; justify-content: center; align-items: center; z-index: 90; padding: 24px; text-align: center;">
             <div style="margin-bottom: 25px;">
@@ -551,13 +529,34 @@
         </div>
 
         <div id="control-panel">
-            <div class="input-group">
-                <input type="text" id="word-input" placeholder="단어를 입력하세요" maxlength="10">
-                <button id="start-btn">이동<br>하기</button>
-
-                <button id="hint-btn" class="secondary-btn">정답<br>보기</button>
+            <!-- Inline Login Section (shown before login) -->
+            <div id="login-section" style="text-align: center; margin-bottom: 15px;">
+                <div style="display: flex; gap: 8px; margin-bottom: 12px;">
+                    <input type="text" id="player-id-input" placeholder="이름을 입력하면 타이머가 시작됩니다."
+                        style="flex: 1; background: rgba(0,0,0,0.2); border: 1px solid var(--secondary-color); border-radius: 12px; padding: 12px 15px; color: white; font-size: 1rem; outline: none;">
+                    <button id="enter-btn"
+                        style="background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: var(--bg-color); border: none; border-radius: 12px; padding: 8px 20px; font-weight: bold; font-size: 0.95rem; cursor: pointer; white-space: nowrap;">시작</button>
+                </div>
+                <div id="login-scoreboard"
+                    style="background: rgba(255,255,255,0.05); border-radius: 12px; padding: 12px; border: 1px solid rgba(255,255,255,0.1);">
+                    <div
+                        style="font-weight: bold; color: var(--primary-color); margin-bottom: 8px; font-size: 0.85rem;">
+                        🏆 오늘의 클리어 보드</div>
+                    <div id="login-scoreboard-list" style="font-size: 0.8rem; color: #94a3b8;">불러오는 중...</div>
+                </div>
             </div>
 
+            <!-- Game Controls (hidden before login) -->
+            <div id="game-controls" style="display: none;">
+                <div class="input-group">
+                    <input type="text" id="word-input" placeholder="단어를 입력하세요" maxlength="10">
+                    <button id="start-btn">이동<br>하기</button>
+
+                    <button id="hint-btn" class="secondary-btn">정답<br>보기</button>
+                </div>
+            </div>
+
+            <div id="active-word-display"></div>
             <div id="action-panel">
                 <h3 id="action-title" style="margin-bottom: 8px; color: var(--text-color); font-size: 1.1rem;">선택: ?
                 </h3>
@@ -569,16 +568,18 @@
                 </div>
                 <button id="btn-close-action" class="secondary-btn"
                     style="margin-top: 5px; height: 36px; padding: 0 10px; font-size: 0.8rem; border-color: rgba(255,255,255,0.2);">닫기</button>
+                <button id="btn-undo" class="secondary-btn"
+                    style="margin-top: 3px; height: 36px; padding: 0 10px; font-size: 0.8rem; border-color: rgba(244,114,182,0.4); color: var(--accent-color); display: none;">↩
+                    되돌리기</button>
             </div>
-            <div id="active-word-display"></div>
             <div id="message-display">격자 위의 자음을 보고 단어를 입력하세요.</div>
             <div id="hint-display" class="hint-text"></div>
 
             <div id="guide-panel">
-                <h3>조작 가이드</h3>
+                <h3>게임 가이드</h3>
                 <div
                     style="font-size: 0.8rem; color: var(--secondary-color); margin-bottom: 10px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 5px; word-break: keep-all; line-height: 1.4;">
-                    알맞은 단어를 입력하고 목적지까지 이동하세요.
+                    두글자 이상의 단어를 입력하고 목적지까지 이동하세요.
                 </div>
                 <div
                     style="font-size: 0.8rem; color: var(--secondary-color); margin-bottom: 10px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 5px;">
@@ -601,6 +602,44 @@
                     <div>ㅝ, ㅞ : 좌측 하단 (↙)</div>
                     <div>ㅡ, ㅣ, ㅢ : 이동하지 않음 (X)</div>
                 </div>
+            </div>
+        </div>
+
+        <!-- Guide Popup Overlay -->
+        <div id="guide-popup"
+            style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; justify-content: center; align-items: center; z-index: 200;">
+            <div
+                style="background: var(--bg-color); border-radius: 20px; padding: 28px 24px; max-width: 400px; width: 90%; border: 1px solid rgba(255,255,255,0.15); max-height: 85vh; overflow-y: auto;">
+                <h2 style="text-align: center; color: var(--primary-color); margin-bottom: 18px; font-size: 1.4rem;">게임
+                    가이드</h2>
+                <div
+                    style="font-size: 0.85rem; color: var(--secondary-color); margin-bottom: 14px; padding-bottom: 8px; border-bottom: 1px solid rgba(255,255,255,0.1); word-break: keep-all; line-height: 1.5;">
+                    두글자 이상의 단어를 입력하고 목적지까지 이동하세요.
+                </div>
+                <div
+                    style="font-size: 0.85rem; color: var(--secondary-color); margin-bottom: 14px; padding-bottom: 8px; border-bottom: 1px solid rgba(255,255,255,0.1);">
+                    <strong>자음 이동:</strong> 초성 ↔ 종성 위치로 이동
+                </div>
+                <div
+                    style="font-size: 0.85rem; color: var(--secondary-color); margin-bottom: 14px; padding-bottom: 8px; border-bottom: 1px solid rgba(255,255,255,0.1);">
+                    <strong>모음 이동:</strong> 모음 모양에 따라 이동
+                </div>
+                <div
+                    style="display: grid; grid-template-columns: 1fr 1fr; gap: 6px; font-size: 0.8rem; color: #94a3b8; margin-bottom: 20px;">
+                    <div>ㅏ, ㅐ : 오른쪽 1칸 (→)</div>
+                    <div>ㅑ, ㅒ : 오른쪽 2칸 (⇉)</div>
+                    <div>ㅓ, ㅔ : 왼쪽 1칸 (←)</div>
+                    <div>ㅕ, ㅖ : 왼쪽 2칸 (⇇)</div>
+                    <div>ㅗ, ㅚ : 위쪽 1칸 (↑)</div>
+                    <div>ㅛ : 위쪽 2칸 (⇈)</div>
+                    <div>ㅜ, ㅟ : 아래쪽 1칸 (↓)</div>
+                    <div>ㅠ : 아래쪽 2칸 (⇊)</div>
+                    <div>ㅘ, ㅙ : 우측 상단 (↗)</div>
+                    <div>ㅝ, ㅞ : 좌측 하단 (↙)</div>
+                    <div>ㅡ, ㅣ, ㅢ : 이동하지 않음 (X)</div>
+                </div>
+                <button id="guide-popup-close"
+                    style="width: 100%; background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: var(--bg-color); border: none; border-radius: 12px; padding: 14px; font-weight: bold; font-size: 1rem; cursor: pointer;">확인</button>
             </div>
         </div>
 
@@ -699,6 +738,7 @@
 
                     this.isInputLocked = false;
                     this.isWarping = false; // Waiting for target click
+                    this.moveHistory = []; // Undo stack
 
                     this.externalDictionary = new Set();
                     this.isDictLoaded = false;
@@ -749,7 +789,7 @@
                 init() {
                     this.setupDOM();
                     this.loadDictionary();
-                    this.initGame();
+                    this.renderEmptyGrid();
                 }
 
                 async loadDictionary() {
@@ -1098,39 +1138,39 @@
                         this.clearBoardOverlay.style.display = 'none';
                     };
 
-                    this.startChallengeBtn.onclick = () => {
-                        this.briefingOverlay.style.display = 'none';
-                        this.startTime = Date.now();
-                        if (this.currentLevelIndex === 0) {
-                            this.overallStartTime = Date.now();
-                        }
+                    // Guide Popup
+                    document.getElementById('guide-popup-close').onclick = () => {
+                        document.getElementById('guide-popup').style.display = 'none';
                     };
 
 
 
                     // Login/ID Elements
-                    this.loginOverlay = document.getElementById('login-overlay');
+                    this.loginSection = document.getElementById('login-section');
+                    this.gameControls = document.getElementById('game-controls');
                     this.playerIdInput = document.getElementById('player-id-input');
                     this.enterBtn = document.getElementById('enter-btn');
 
                     // Fetch and display today's scoreboard on login screen
                     this.loadLoginScoreboard();
 
-                    this.enterBtn.onclick = () => {
+                    const doLogin = () => {
                         const id = this.playerIdInput.value.trim();
                         if (id) {
                             this.playerId = id;
-                            this.loginOverlay.style.transition = 'opacity 0.5s ease, transform 0.5s ease';
-                            this.loginOverlay.style.opacity = '0';
-                            this.loginOverlay.style.transform = 'scale(1.1)';
-                            setTimeout(() => {
-                                this.loginOverlay.style.display = 'none';
-                                this.showMessage(`${this.playerId}님, 환영합니다.`);
-                            }, 500);
+                            this.loginSection.style.display = 'none';
+                            this.gameControls.style.display = 'block';
+                            this.initGame();
+                            this.showMessage(`${this.playerId}님, 환영합니다.`);
                         } else {
                             this.playerIdInput.style.animation = 'shake 0.5s';
                             setTimeout(() => this.playerIdInput.style.animation = '', 500);
                         }
+                    };
+
+                    this.enterBtn.onclick = doLogin;
+                    this.playerIdInput.onkeypress = (e) => {
+                        if (e.key === 'Enter') doLogin();
                     };
 
                     // Add shake animation style dynamically if not present
@@ -1185,6 +1225,8 @@
 
                     this.btnWarp.onclick = () => this.initiateWarp();
                     this.btnMove.onclick = () => this.initiateMove();
+                    this.btnUndo = document.getElementById('btn-undo');
+                    this.btnUndo.onclick = () => this.undoMove();
                     document.getElementById('btn-close-action').onclick = () => this.hideActionPanel();
                 }
 
@@ -1299,6 +1341,17 @@
                     });
                 }
 
+                renderEmptyGrid() {
+                    this.gridEl.innerHTML = '';
+                    for (let y = 0; y < this.gridSize; y++) {
+                        for (let x = 0; x < this.gridSize; x++) {
+                            const cell = document.createElement('div');
+                            cell.className = 'cell';
+                            this.gridEl.appendChild(cell);
+                        }
+                    }
+                }
+
                 render() {
                     this.gridEl.innerHTML = '';
                     for (let y = 0; y < this.gridSize; y++) {
@@ -1356,13 +1409,13 @@
 
                     this.isInputLocked = true;
                     this.inputEl.disabled = true;
-                    this.inputEl.value = "";
                     this.startBtn.innerHTML = "다시<br>하기";
                     this.startBtn.onclick = () => this.resetGame();
 
                     this.renderWordBlocks();
                     this.showMessage("격자 위의 자음과 일치하는 글자를 클릭하세요.");
                     this.isWarping = false;
+                    this.moveHistory = [];
                     this.hideActionPanel();
                 }
 
@@ -1376,7 +1429,34 @@
                     this.renderWordBlocks();
                     this.hideActionPanel();
                     this.clearHighlights();
+                    this.moveHistory = [];
                     this.showMessage("격자 위의 자음을 보고 단어를 입력하세요.");
+                }
+
+                saveState() {
+                    this.moveHistory.push({
+                        playerPos: { ...this.playerPos },
+                        letterStates: this.letterStates.map(s => ({ ...s })),
+                        selectedBlockIndex: this.selectedBlockIndex
+                    });
+                }
+
+                undoMove() {
+                    if (this.moveHistory.length === 0) return;
+                    const prev = this.moveHistory.pop();
+                    this.playerPos = prev.playerPos;
+                    this.letterStates = prev.letterStates;
+                    this.selectedBlockIndex = prev.selectedBlockIndex;
+                    this.isWarping = false;
+                    this.clearHighlights();
+                    this.render();
+                    this.renderWordBlocks();
+                    if (this.selectedBlockIndex >= 0) {
+                        this.selectBlock(this.selectedBlockIndex);
+                    } else {
+                        this.hideActionPanel();
+                    }
+                    this.showMessage("이전 상태로 되돌렸습니다.");
                 }
 
                 resetToStartPos() {
@@ -1437,7 +1517,7 @@
                     this.initialStartPos = { ...this.playerPos }; // Save initial start for visual label
                     this.render();
 
-                    // Start timer immediately
+                    // Start timer
                     this.startTime = Date.now();
                     if (this.currentLevelIndex === 0) {
                         this.overallStartTime = Date.now();
@@ -1489,6 +1569,7 @@
                         case 'normal': this.showMessage('격자 위의 자음을 보고 단어를 입력하세요.'); break;
                         case 'long_word': this.showMessage('🔴 3글자 이상 단어만 사용 가능!'); break;
                     }
+
                 }
 
                 async checkWinCondition() {
@@ -1681,6 +1762,7 @@
 
                     this.actionTitle.textContent = `선택: '${state.char}'`;
                     this.actionPanel.style.display = 'flex';
+                    this.btnUndo.style.display = this.moveHistory.length > 0 ? 'block' : 'none';
 
                     // Validate Actions
                     const cellRaw = this.grid[this.playerPos.y][this.playerPos.x];
@@ -1796,6 +1878,7 @@
                 }
 
                 async resolveWarp(targetPos) {
+                    this.saveState();
                     this.isWarping = false;
                     this.clearHighlights();
 
@@ -1818,6 +1901,7 @@
                 }
 
                 async initiateMove() {
+                    this.saveState();
                     const state = this.letterStates[this.selectedBlockIndex];
                     const dec = state.decomposed;
 
